# furcate-mesh

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/furcate-mesh-cli/: Cargo.toml
crates/furcate-mesh-cli/src/: main.rs
crates/furcate-mesh-core/: Cargo.toml
crates/furcate-mesh-core/src/: extensions.rs  lib.rs  wire.rs
crates/furcate-mesh-core/tests/: protocol_vectors.rs
crates/furcate-mesh-discovery/: Cargo.toml
crates/furcate-mesh-discovery/src/: lib.rs
crates/furcate-mesh-identity/: Cargo.toml
crates/furcate-mesh-identity/src/: lib.rs
crates/furcate-mesh-identity/tests/: tls_handshake.rs
crates/furcate-mesh-routing/: Cargo.toml
crates/furcate-mesh-routing/src/: lib.rs
crates/furcate-mesh-transfer/: Cargo.toml
crates/furcate-mesh-transfer/src/: lib.rs
crates/furcate-mesh-transport/: Cargo.toml
crates/furcate-mesh-transport/src/: lib.rs
docs/: INDEX.md
docs/architecture/: extension-model.md  operating-modes.md
docs/architecture/integrations/: tenzro.md
