# SPDX-License-Identifier: Apache-2.0
[package]
name          = "furcate-mesh-cli"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
homepage.workspace      = true
repository.workspace    = true
readme.workspace        = true
description   = "furcate-mesh CLI binary (the integration point)."

[[bin]]
name = "furcate-mesh"
path = "src/main.rs"

[dependencies]
furcate-mesh-core      = { path = "../furcate-mesh-core" }
furcate-mesh-identity  = { path = "../furcate-mesh-identity" }
furcate-mesh-discovery = { path = "../furcate-mesh-discovery" }
furcate-mesh-transport = { path = "../furcate-mesh-transport" }
furcate-mesh-transfer  = { path = "../furcate-mesh-transfer" }
furcate-mesh-routing   = { path = "../furcate-mesh-routing" }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tokio-stream  = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
