# SPDX-License-Identifier: Apache-2.0
[package]
name          = "furcate-mesh-routing"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
homepage.workspace      = true
repository.workspace    = true
readme.workspace        = true
description   = "Work-stealing routing decisions for furcate-mesh."

[dependencies]
furcate-mesh-core = { path = "../furcate-mesh-core" }
furcate-inference-core = { workspace = true }
tokio         = { workspace = true, features = ["sync", "rt", "time"] }
serde         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tokio         = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
