# SPDX-License-Identifier: Apache-2.0
[package]
name          = "furcate-mesh-transfer"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
homepage.workspace      = true
repository.workspace    = true
readme.workspace        = true
description   = "Content-addressed BLAKE3 chunked transfer between mesh peers."

[dependencies]
furcate-mesh-core = { path = "../furcate-mesh-core" }
tokio         = { workspace = true, features = ["fs", "io-util", "rt", "sync", "macros", "time"] }
zenoh         = { workspace = true }
blake3        = { workspace = true }
hex           = { workspace = true }
bytes         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile      = "3"
tokio         = { workspace = true, features = ["macros", "rt", "fs", "io-util"] }

[lints]
workspace = true
